--- a/style.css
+++ b/style.css
@@ -317,10 +317,9 @@ footer{
 
 /* form css for other page */
 
-body{
+html{
     background-image: url(./img/4.png);
     background-repeat: no-repeat;
-    background-size: cover;
     width: 100%;
 }
 
